Fix bug #15369. In fact, the last modification date of a document (whatever it is, WYSIWYG or attachments for example), isn't indexed. Now any documents have their modification data (date and author) indexed when they have been modified. Some unit tests are added to validate the bug and its fix.
ICal4JExporterTest fails if executed after ICal4JImporterTest because
the option iCal4J Outlook (KEY_OUTLOOK_COMPATIBILITY) has been enabled.
But, in the export, this option should be unset and the default line
feed should be used. This is done now with the
FoldingWriter.REDUCED_FOLD_LENGTH parameter.